# feruz.dev

./: .gitignore  Feruz_Davletov_CV.yaml  Feruz_Davletov_CV_DE.yaml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  svelte.config.js  vite.config.js
projects/: main.ipynb  matmul.ipynb  system.py
src/: app.html
src/lib/: Footer.svelte
src/routes/: +layout.svelte  +page.svelte  Body.svelte  CV.svelte
src/routes/cv/: +page.svelte
src/routes/projects/: +page.svelte  matmul.html
src/routes/projects/p/: matmul.svelte
