[tool.poetry]
name = "feruz-dev"
version = "0.1.0"
description = ""
authors = ["Feruz <fdavletov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
notebook = "^7.1.1"
scikit-learn = "^1.4.1.post1"
keras = "^3.0.5"
rendercv = "^1.4"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
